--- a/public/style.css
+++ b/public/style.css
@@ -159,3 +159,10 @@ h2 {
     transform: translateY(-5px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
+
+.card-back p {
+    margin-bottom: 20px;
+    font-size: 1.2em;
+    color: white;
+    text-align: center;
+  }
